Minor fix - Navbar had far too much padding. Also added a background image, might not keep it

--- a/css/partials/_global.css
+++ b/css/partials/_global.css
@@ -33,17 +33,26 @@
    color: var(--dark);
 }
 
-.button.primary-button::after{
+.button.primary-button::after, 
+.button.secondary-button::after{
    position: absolute;
    top: -2px; left: -2px;
-   bottom: -2px; right: -2px;
-   background-image: var(--gradient-color);
-   content: '';
+   bottom: -2px;  right: -2px;
+   background: var(--gradient-color);
+   content: ' ';
    z-index: -1;
-   border-radius: 4px; 
+   border-radius: 4px;
 }
 
 
-.button .secondary-button{ 
+.button.secondary-button{
+   background: white;
+   background-clip: padding-box;
+   transition: background .6s ease;
+}
 
+.button.secondary-button:hover{
+   background: var(--gradient-color);
+   color: whitesmoke;
+   box-shadow: var(--box-shadow);
 }
